assets/css/styles.css
#root {
	--red: rgb(255, 0, 0);
	--gray: #adb5bd;
}

.custom-input {
	margin-bottom: 10px;
}

.custom-header {
	height: 50px;
	display: flex;
	align-items: center;
	margin-bottom: 0px;
}

.custom-bg {
	background-color: darkcyan;
	border-radius: 15px;
}

.custom-text-color {
	color: darkcyan;
}

.custom-col {
	padding-right: 0px;
	padding-left: 0px;
}

.custom-row {
	margin-left: 0px;
	margin-right: 0px;
}

.custom-text {
	font-style: normal;
}

.jumbotron-custom {
	padding: 2rem 1rem;
	background-color: #e9ecef;
}

.custom-error {
	color: var(--red);
	margin-bottom: 0;
	line-height: 0;
}

